# CosseratRod-RKMK-C

./: CMakeLists.txt  Dockerfile  README.md  RunMeFwdDyn.c  RunMeInvDyn.c  RunMeRigidKinCW.c  ShowOut.py  TODO.md  Theta_DDot_Rigid_matlab.csv  compareJson.py  icraRobotRun.c  playground.c  runTests.c  showSE3.py  testing.c
FDM/: Discretization.c  FDM.c  FDM.h
LieGroup/: LieGroup.c  LieGroup.h
MatrixLib/: Matrices.c  Matrices.h
PythonTesting/: CsvCompare.py  Cutils.py  callFns.py  eigenInterpret.py  showOut.py  showWithSlider.py  testFns.py
RobotLib/: FwdDyn.c  InvDyn.c  README.md  RobotLib.c  RobotLib.h  Solver.c  makeRobots.c
Solvers/: solvers.c  solvers.h
Solvers/V1/: SolversV1.c  SolversV1.h
Tests/: testMatrix.c  testMatrix.h
levmar-2.6/: CMakeLists.txt  misc.c
matrixLib/: Matrices.c  Matrices.h
testData/: posData.csv  posRData.csv
